video card: fix visibility on safari

--- a/www/css/scss-v2/components/cards.scss
+++ b/www/css/scss-v2/components/cards.scss
@@ -242,13 +242,19 @@
 			}
 		}
 
+		&.video img{
+			object-fit: cover !important;
+		}
+		
 		&.video img,
 		&.video iframe {
 			height: 100% !important;
 			width: 100% !important;
-			object-fit: cover !important;
+			position: absolute;
+			z-index: 1;
 		}
 		.play-button {
+			z-index: 2;
 			position: absolute;
 			top: 50%;
 			left: 50%;
